# gaming

./: .gitignore  .gitmodules  .prettierrc  README.md
Exercises/Excercise2/: Engine.cpp  Engine.h  ITUGames.h  Player.cpp  Player.h  Score.h  main.cpp  main.h
Exercises/Exercise1/: main.cpp  main.h
Exercises/Exercise10/: Makefile  cmake_install.cmake
Exercises/Exercise4/: CMakeCache.txt  Makefile  cmake_install.cmake
SimpleRenderEngineProject/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake
SimpleRenderEngineProject-exam/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake
SimpleRenderEngineProject-exam/cmake/: FindSDL2_IMAGE.cmake
SimpleRenderEngineProject/Asteroids/: Asteroid.cpp  Asteroid.h  Asteroids  AsteroidsManager.cpp  AsteroidsManager.h  CMakeLists.txt  KeyboardCache.cpp  KeyboardCache.h  LaserShot.cpp  LaserShot.h  Makefile  ParticleManager.cpp  ParticleManager.h  Player.cpp  Player.h  Score.cpp  Score.h  SpaceInvaders  cmake_install.cmake  imgui.ini  main.cpp  main.h  utils.cpp  utils.h
SimpleRenderEngineProject/Engine/: Makefile  cmake_install.cmake
SimpleRenderEngineProject/ExampleGame/: Makefile  MyGame  cmake_install.cmake
SimpleRenderEngineProject/Flappy/: CMakeLists.txt  Makefile  cmake_install.cmake
SimpleRenderEngineProject/Flappy/Game/: ComponentController.cpp  ComponentController.h  ComponentSpawner.cpp  ComponentSpawner.h
SimpleRenderEngineProject/Flappy/data/: scene.json
SimpleRenderEngineProject/Platformer/: CMakeLists.txt  cmake_install.cmake
SimpleRenderEngineProject/Platformer/Game/: ComponentController.cpp  ComponentController.h  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.cpp
SimpleRenderEngineProject/Platformer/data/: scene.json
SimpleRenderEngineProject/Snake/: CMakeLists.txt  Engine.cpp  Makefile  Player.cpp  Player.h  Snake  main.cpp  (+2 more)
SimpleRenderEngineProject/Wolfenstein/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
SimpleRenderEngineProject/Wolfenstein/Game/: ComponentController.h  ComponentLevelLayout.cpp  ComponentRendererMesh.cpp
SimpleRenderEngineProject/Wolfenstein/data/: scene.json
(+252 files in other folders)
